@@ -43,6 +43,7 @@ Christoph Wilhelms
 Christophe Labouisse
 Christopher A. Longo
 Christopher Charlier
+Clemens Hammacher
 Conor MacNeill
 Craeg Strong
 Craig Cottingham
