@@ -195,6 +195,10 @@
     <last>Charlier</last>
   </name>
   <name>
+    <first>Clemens</first>
+    <last>Hammacher</last>
+  </name>
+  <name>
     <first>Conor</first>
     <last>MacNeill</last>
   </name>
